fix(explore): add spacing to rating options when wrapped to 2 rows

--- a/app/styles/pages/_media-browse.scss
+++ b/app/styles/pages/_media-browse.scss
@@ -420,6 +420,7 @@
       color: #a3a9b7;
       padding: 5px 10px;
       margin-right: 5px;
+      margin-bottom: 5px;
       border-radius: 2px;
       &.active {
         background: #EDEEEF;
